public/css/style.css
/* ... */
.addCurtainCard__cancelBtn {
    background: none;
    border: 2px solid;
    color: var(--clr-yellow);
    cursor: pointer;
}

.addCurtainCard__form-locations {
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin-right: 6%;
}

.addCurtainCard__form-location{
    margin-right: 10px;
    display: flex;
    gap: 10px;
    padding: 5px 0px 5px 0px;
    overflow-x: scroll;
    overflow-y: hidden;
    white-space: nowrap;
    -ms-overflow-style: none;  /* IE and Edge */
    scrollbar-width: none;  /* Firefox */
}
.addCurtainCard__form-location::-webkit-scrollbar{
    display: none;
}

.addCurtainCard__form-locations input[type="radio"] {
    display: none;
}

.addCurtainCard__form-location label {
    display: inline-block;
    background-color: var(--clr-white);
    width: auto;
    min-width: 34px;
    height: 34px;
    padding: 10px;
    text-align: center;
    font-family: Arial;
    cursor: pointer;
    color: var(--clr-dark-blue);
    font-size: 80%;
    font-weight: 600;
    border-radius: 5px;
    transition: 0.2s all;
    flex-shrink: 0; 
}


.addCurtainCard__form-locations .add label{
    color: var(--clr-yellow);
    border: 2px solid var(--clr-yellow);
    background-color: transparent;
    padding: 50%;
    padding-right: 75%;
    padding-left: 75%;
    transition: 0.2s all;
}

.addCurtainCard__form-locations .add label:hover {
    cursor: pointer;
}

.addCurtainCard__form-locations input[type="radio"]:hover+label {
    background-color: #FFD60A;
}
.addCurtainCard__form-locations input[type="radio"]:checked+label {
    background-color: var(--clr-yellow);
    transition: 0.2s all;
    transform: scale(1.1);
}

.addCurtainCard__form-locations .add input[type="radio"]:hover+label {
    background-color: transparent;
    border: 2px solid var(--clr-yellow);
    color: var(--clr-yellow);
}
.addCurtainCard__form-locations .add input[type="radio"]:checked+label {
    border: 2px solid var(--clr-yellow);
    color: var(--clr-yellow);
    background-color: transparent;
    transition: 0.2s all;
    transform: scale(1.1);
}

.addCurtainCard__form .newLocationInput {
    display: none;
}

/* Curtain Details Pagina --------- */

/* Header */

.detailsHeader .material-icons {
    transition: 0.2s all;
}

.detailsHeader .material-icons:hover {
    color: var(--clr-yellow);
    cursor: pointer;
    transform: translateX(-0.15rem);
}

/* Open close slider */

.openCloseSlider__container {
    background: var(--clr-dark-blue);
    width: 100%;
    height: 80px;
    margin-top: 25px;
    border-radius: 10px;
    display: flex;
    align-items: center;
    justify-content: space-evenly;
    transition: 0.2s all;
}


.openCloseSlider__container p {
    font-weight: 400;
}

.openCloseSlider {
    display: flex;
    align-items: center;
    width: 60%;
}

.openCloseSlider__slider {
    -webkit-appearance: none;
    width: 100%;
    height: 2px;
    background: none;
    outline: none;
    background-color: white;
}

.openCloseSlider__slider::-webkit-slider-thumb {
    -webkit-appearance: none;
    appearance: none;
    width: 1.5rem;
    height: 1.5rem;
    border-radius: 100%;
    background: var(--clr-white);
    cursor: pointer;
    transition: .2s all;
}

.openCloseSlider__slider::-webkit-slider-thumb:hover {
    width: 1.6rem;
    height: 1.6rem;
}

.openCloseSlider__slider::-moz-range-thumb {
    width: 1.5rem;
    height: 1.5rem;
    border-radius: 100%;
    background: var(--clr-white);
    cursor: pointer;
}

/* Timers List */

.timerList {
    width: 80%;
    margin-top: 25px;
    /* display: grid; */
    display: flex;
    flex-direction: column;
    /* grid-template-columns: 1fr; */
    gap: 10px;
    margin-bottom: 1rem;
}

.timerCard__wrapper, .timerList__addTimerBtn, .singleTimerCard__wrapper {
    width: 100%;
    border-radius: 10px;
}

.timerCard__wrapper {
    background: var(--clr-dark-blue);
    height: 8.5rem;
}
.singleTimerCard__wrapper {
    background: var(--clr-dark-blue);
    height: auto;
}

.timerCard {
    margin: 1rem;
    position: relative;
}

.singleTimerCard__content{
    display: flex;
    align-items: center;
    justify-content: space-between;
    width: 75%;
}
.timerCard__timeInfo{
    display: flex;
    gap: 8px;
    align-items: center;
}

.timerCard__openToClose-open {
    left: -1.1rem;
}

.timerCard__openToClose-close {
    right: -1.1rem;
}

.timerCard__delete {
    position: absolute;
    top: -10px;
    right: -10px;
    transition: 0.4s all;
    padding: 0.2rem;
    
}

.timerCard__deleteHoverText {
    position: absolute;
    top: -7px;
    right: -15px;
    line-height: 1rem;
    transform: scale(0.75);
    color: var(--clr-orange);
    transition: 0.2s all ease;
    opacity: 0;
    cursor: pointer;
    line-height: 1rem;
    padding: 0.2rem;
    font-weight: 400;
    border-radius: 5px;
}

.timerCard__p:hover .timerCard__deleteHoverText {
    right: 16px;
    opacity: 1;
    transform: scale(1);
}

.timerCard__p:hover .timerCard__delete {
    cursor: pointer;
    color: var(--clr-orange);
}

.timerCard__deleteHoverText:hover {
    opacity: 0;
}

/* .timerCard__deleteHoverText:hover {
    opacity: 1;
    cursor: pointer;
} */

.singleTimerCard__time {
    font-size: 150%;
    font-weight: 200;
}

.timerCard__schedule {
    margin-top: 2rem;
    border-radius: 100px;
    background-color: var(--clr-light-blue);
    -webkit-box-shadow: inset 0px 0px 39px -6px rgba(0, 0, 0, 0.631); 
    box-shadow: inset 0px 0px 39px -6px rgba(0, 0, 0, 0.624);
}

.timerCard__openToClose {
    display: flex;
    justify-content: space-between;
    border-radius: 100px;
    background-color: var(--clr-yellow);
    width: 50%;
    margin-left: 20%;
    animation: openToClose 0.5s ease-out;
}

@keyframes openToClose {
    0% {
        width: 30%;
        margin-left: 30%;
    }

    100% {
        width: 50%;
        margin-left: 20%;
    }
}
/* ... */

